spark/simple-spark/spark-historyserver-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: spark
    part: spark-historyserver
  name: spark-historyserver
spec:
  replicas: 1
  selector:
    matchLabels:
      part: spark-historyserver
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        part: spark-historyserver
    spec:
      containers:
        - args:
            - bash
            - -c
            - /opt/spark/sbin/start-history-server.sh
          image: mataelang/spark:3.3.1-scala2.13
          name: spark-historyserver
          ports:
            - containerPort: 18080
          resources:
            limits:
              cpu: "1"
              memory: "1Gi"
            requests:
              cpu: "1"
              memory: "1Gi"
          volumeMounts:
            - name: spark-config
              mountPath: /opt/spark/conf/
              subPath: conf
      restartPolicy: Always
      volumes:
        - name: spark-config
          configMap:
            name: spark-config
