spark/simple-spark/spark-submit-enrich-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: spark
    part: spark-submit-enrich
  name: spark-submit-enrich
spec:
  containers:
    - args:
        - bash
        - -c
        - "/opt/spark/bin/spark-submit --class $()$(SPARK)_APP_CLASSNAME --name $()$(SPARK)_APP_NAME
          --total-executor-cores $()$(TOTAL)_EXECUTOR_CORES --conf spark.ui.port=$()$(SPARK)_APP_UI
          --conf spark.submit.deployMode=$()$(DEPLOY)_MODE --conf spark.driver.memory=$()$(SPARK)_DRIVER_MEMORY
          --conf spark.executor.cores=$()$(SPARK)_EXECUTOR_CORES --conf spark.executor.memory=$()$(SPARK)_EXECUTOR_MEMORY
          --conf spark.eventLog.dir=$()$(SPARK)_EVENTLOG_DIR --files conf/app.properties$()$(SPARK)_APP_JAR_PATH"
      image: mataelang/spark:3.3.1-scala2.13
      name: spark-submit-enrich
      ports:
        - containerPort: 7777
      #resources: {}
      volumeMounts:
        - name: spark-config
          mountPath: /opt/spark/conf/
          subPath: conf
      workingDir: /opt/spark
  restartPolicy: Never
  volumes:
    - name: spark-config
      configMap:
        name: spark-config
