spark/simple-spark/spark-worker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: spark
    part: spark-worker
  name: spark-worker
spec:
  replicas: 2
  selector:
    matchLabels:
      part: spark-worker
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        part: spark-worker
    spec:
      containers:
        - args:
            - bash
            - -c
            - /opt/spark/sbin/start-worker.sh $()$(SPARK)_MASTER
          image: mataelang/spark:3.3.1-scala2.13
          name: spark-worker
          ports:
            - containerPort: 8081
            - containerPort: 4040
          #resources: {}
          volumeMounts:
            - name: spark-config
              mountPath: /opt/spark/conf/
              subPath: conf
      restartPolicy: Always
      volumes:
        - name: spark-config
          configMap:
            name: spark-config
