spark/simple-spark/spark-master-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: spark
    part: spark-master
  name: spark-master-service
spec:
  ports:
    - name: "8080"
      port: 8080
      targetPort: 8080
    - name: "7077"
      port: 7077
      targetPort: 7077
  selector:
    part: spark-master
status:
  loadBalancer: {}
