spark/simple-spark/spark-worker-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: spark
    part: spark-worker
  name: spark-worker-service
spec:
  ports:
    - name: "8081"
      port: 8081
      targetPort: 8081
    - name: "4040"
      port: 4040
      targetPort: 4040
  selector:
    part: spark-worker
status:
  loadBalancer: {}
